--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -513,12 +513,38 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
 .m-3 {
   margin: 0.75rem;
 }
 
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
 .border {
   border-width: 1px;
+}
+
+.border-gray-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(55 65 81 / var(--tw-border-opacity));
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .text-3xl {
@@ -526,14 +552,14 @@ video {
   line-height: 2.25rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
